--- a/nginx/templates/default/TEMPLATE.stats.erb
+++ b/nginx/templates/default/TEMPLATE.stats.erb
@@ -5,6 +5,6 @@ server {
   access_log off;
   error_log  /dev/null crit;
 
-  root   /srv/www/_stats/sites/TEMPLATE;
+  root   <%= @node[:nginx][:www_path] %>/_stats/sites/TEMPLATE;
   index  index.html;
 }
