--- a/roundcube/templates/default/db.inc.php.erb
+++ b/roundcube/templates/default/db.inc.php.erb
@@ -19,7 +19,7 @@ $rcmail_config = array();
 // For examples see http://pear.php.net/manual/en/package.database.mdb2.intro-dsn.php
 // currently supported db_providers: mysql, mysqli, pgsql, sqlite, mssql
 
-$rcmail_config['db_dsnw'] = '<%= @node[:webapp][:roundcube][:db_provider] %>';
+$rcmail_config['db_dsnw'] = '<%= @node[:webapps][:roundcube][:db_provider] %>';
 // postgres example: 'pgsql://roundcube:pass@localhost/roundcubemail';
 // Warning: for SQLite use absolute path in DSN:
 // sqlite example: 'sqlite:////full/path/to/sqlite.db?mode=0646';
