db_install for webapps and openssl ssl_cert
db_install definition in mysql recipe, for webapps "environment".
This allow to install the db of the web applications es: postfixadmin,
roundcube, ecc

ssl_cert definition in openssl recipe, is taken from 37signals cookbooks
and allow to create a SSL cert. It's useful in nginx and postfix recipes.

--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -1,5 +1,6 @@
 ###
-### kalos configuration
+### <%= @node[:hostname] %> configuration
+###
 ### max_clients = worker_processes * worker_connections/CPUs
 <% if @node[:nginx][:worker_processor] == 0 %>
 ### max_clients = <%= (@node[:cpu][:total] * 2) %> * <%= @node[:nginx][:worker_connections] %>/<%= @node[:cpu][:total] %> = <%= ((@node[:cpu][:total] * 2) * (@node[:nginx][:worker_connections].to_i / @node[:cpu][:total])) %>
