--- a/mysql/templates/default/grants.sql.erb
+++ b/mysql/templates/default/grants.sql.erb
@@ -4,4 +4,4 @@
 GRANT SELECT, INSERT, UPDATE, DELETE, CREATE, DROP, RELOAD, SHUTDOWN, PROCESS, FILE, REFERENCES, INDEX, ALTER, SHOW DATABASES, SUPER, CREATE TEMPORARY TABLES, LOCK TABLES, EXECUTE, REPLICATION SLAVE, REPLICATION CLIENT ON *.* TO 'debian-sys-maint'@'localhost' IDENTIFIED BY '<%= @node[:mysql][:server_debian_password] %>' WITH GRANT OPTION;
 
 # Set the server root password. This should be preseeded by the package installation.
-SET PASSWORD FOR 'root'@'localhost' = PASSWORD('<%= @node[:mysql][:server_root_password] %>');
+SET PASSWORD FOR 'root'@'%' = PASSWORD('<%= @node[:mysql][:server_root_password] %>');
