--- a/apt/templates/default/sources.list.erb
+++ b/apt/templates/default/sources.list.erb
@@ -1,22 +1,23 @@
-### stable
+### debian stable
 ###
-<% @node[:apt][:mirrors].each do |mirror| -%>
-deb http://<%= mirror %>/debian/ stable main contrib non-free
-#deb-src http://<%= mirror %>/debian/ stable main contrib non-free
+<% @urls = @node[:apt][:proxy_url].empty? ? @node[:apt][:mirrors] : @node[:apt][:proxy_url] -%>
+<% @urls.each do |url| -%>
+deb http://<%= url %>/debian/ stable main contrib non-free
+  <% if @node[:apt][:sources] == 'on' %>
+deb-src http://<%= url %>/debian/ stable main contrib non-free
+  <% end -%>
 <% end -%>
 
 # volatile
-deb http://volatile.debian.org/debian-volatile stable/volatile main contrib non-free
-#deb-src http://volatile.debian.org/debian-volatile stable/volatile main contrib non-free
+<% @url_volatile = @node[:apt][:proxy_url].empty? ? "volatile.debian.org" : @node[:apt][:proxy_url] -%>
+deb http://<%= @url_volatile %>/debian-volatile stable/volatile main contrib non-free
+<% if @node[:apt][:sources] == 'on' %>
+deb-src http://<%= @url_volatile %>/debian-volatile stable/volatile main contrib non-free
+<% end -%>
 
 # security
-deb http://security.debian.org/ stable/updates main contrib non-free
-#deb-src http://security.debian.org/ stable/updates main contrib non-free
-
-
-### testing
-###
-<% @node[:apt][:mirrors].each do |mirror| -%>
-deb http://<%= mirror %>/debian/ testing main contrib non-free
-#deb-src http://<%= mirror %>/debian/ testing main contrib non-free
+<% @url_security = @node[:apt][:proxy_url].empty? ? "security.debian.org" : "#{@node[:apt][:proxy_url]}/security" -%>
+deb http://<%= @url_security %> stable/updates main contrib non-free
+<% if @node[:apt][:sources] == 'on' %>
+deb-src http://<%= @url_security %>/ stable/updates main contrib non-free
 <% end -%>
