--- a/apt/templates/default/apt-proxy-v2.conf.erb
+++ b/apt/templates/default/apt-proxy-v2.conf.erb
@@ -12,10 +12,10 @@ min_refresh_delay = 1s
 complete_clientless_downloads = 1
 
 ;; Debugging settings.
-debug = all:4 db:0
+debug = all:3 db:0
 
 time = 30
-passive_ftp = on
+passive_ftp = off
 
 ;;--------------------------------------------------------------
 ;; Cache housekeeping
